apps/schoolrider/landing/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schoolrider-web
  namespace: schoolrider
spec:
  selector:
    app: schoolrider-web
  ports:
  - port: 80
    targetPort: 9012
