apps/schoolrider/landing/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schoolrider-web-ingress
  namespace: schoolrider
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - web.schoolrider.com
        - schoolrider.com
      secretName: schoolrider-web-tls

  rules:
    - host: web.schoolrider.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schoolrider-web
                port:
                  number: 80

    - host: schoolrider.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schoolrider-web
                port:
                  number: 80
